--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MC Command Img</title>
     <meta name="description" content="Minecraft(マイクラ)のコマンドをシンタックスハイライトした画像を生成し、ダウンロードしたりクリップボードにコピーしたりすることができるツールです。生成した画像は、サイト制作や動画制作にご自由にお使いいただけます。">
+    <!-- OGP -->
+    <meta property="og:title" content="MC Command Img">
+    <meta property="og:description" content="Minecraft(マイクラ)のコマンドをシンタックスハイライトした画像を生成し、ダウンロードしたりクリップボードにコピーしたりすることができるツールです。生成した画像は、サイト制作や動画制作にご自由にお使いいただけます。">
+    <meta property="og:url" content="https://natsuneco.github.io/mc-command-img/">
+    <meta property="og:locale" content="ja_JP">
+    <meta property="og:image" content="サムネイル画像のURL">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="なつねこの部屋">
+    <meta name="twitter:card" content="summary_large_image"> 
+    <meta name="twitter:site" content="@natsuneco_nico">
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
