--- a/src/en/index.html
+++ b/src/en/index.html
@@ -74,19 +74,9 @@
             <p>The generated images can be used freely for video production, website production, and other purposes. When you post, I would appreciate it if you would include a link to this site!</p>
             <p>Source code and other information is available on <a href="https://github.com/natsuneco/mc-command-img">GitHub</a>.</p>
         </section>
-        <section class="links">
-            <div class="linksWrapper">
-                <div class="link-card">
-                    <p>Follow me!</p>
-                    <a href="https://twitter.com/natsuneco_nico" target="_blank" rel="noopener noreferrer">
-                        <img src="/mc-command-img/img/x.png" alt="X @natsuneco_nico">
-                    </a>
-                </div>
-            </div>
-        </section>
     </main>
     <footer>
-        <p><small>&copy;&nbsp;2024&nbsp;<a href="https://twitter.com/natsuneco_nico" target="_blank" rel="noopener noreferrer">Natsuneco</a></small></p>
+        <p><small>&copy;&nbsp;2024&nbsp;<a href="https://github.com/natsuneco" target="_blank" rel="noopener noreferrer">natsune</a></small></p>
     </footer>
     <script src="/mc-command-img/js/main.min.js"></script>
 </body>
