--- a/src/index.html
+++ b/src/index.html
@@ -81,17 +81,11 @@
                         <img src="https://static.zenn.studio/images/logo.png" alt="Zennのロゴ" class="zenn-logo">
                     </a>
                 </div>
-                <div class="link-card">
-                    <p>X&nbsp;(Twitter)&nbsp;フォローしてね</p>
-                    <a href="https://twitter.com/natsuneco_nico" target="_blank" rel="noopener noreferrer">
-                        <img src="/mc-command-img/img/x.png" alt="X @natsuneco_nico">
-                    </a>
-                </div>
             </div>
         </section>
     </main>
     <footer>
-        <p><small>&copy;&nbsp;2024&nbsp;<a href="https://twitter.com/natsuneco_nico" target="_blank" rel="noopener noreferrer">なつねこ</a></small></p>
+        <p><small>&copy;&nbsp;2024&nbsp;<a href="https://github.com/natsuneco" target="_blank" rel="noopener noreferrer">natsune</a></small></p>
     </footer>
     <script src="/mc-command-img/js/main.min.js"></script>
 </body>
